--- a/src/Gatling.Runner.csproj
+++ b/src/Gatling.Runner.csproj
@@ -14,4 +14,11 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.7.12" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Models\" />
+    <Folder Include="Queuing\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
